--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -172,7 +172,7 @@ img.hover{
     opacity:1; transition:opacity 0.2s ease;
     &:hover{opacity:0.8}
 }
-h1 .retourne {
+h1 span {
 				transform:scale(1,-1) !important;
 }
 h1 .inverse {
