--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -29,7 +29,7 @@
 			<div class="col-sm-8 col-sm-push-2 presentationArticle" >
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']" class="redacteur"></rubedo-field><!--Rédacteur-->
-			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" class="contenu_article"></rubedo-field>
+			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText'] && isClient" class="contenu_article"></rubedo-field>
 					
 							<div ng-if="!isClient && !contentDetailCtrl.oldArticle" class="col-md-12 bg-grey" style="text-align:center">
 								<h2 >Article réservé aux abonnés</h2>
@@ -84,7 +84,6 @@
 								  <p style="text-align:center"><button  class="btn btn-default btn-abonne"><a rubedo-page-link="58e51a9c245640db008bde81">Je m'abonne</a></button></br></p>
 								</div>
 							</div>
-						</div>	
 							
 						  
 						
