--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -90,32 +90,18 @@
 			</div>
 </div>
 
-<div class="row">
-    
-    <div class="col-sm-8 col-sm-push-2">
-        <h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;">Sommaire - {{contentDetailCtrl.foiContents.data[0].text[0]}}</h3>
-        <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.foiContents.data[0].text[0]}}"></rubedo-field><!--Plan-->
-        
-		<div class="sommaire">
-            <!--<rubedo-field field =  "{{contentDetailCtrl.getFieldByName('richText')}}"></rubedo-field><!--Plan-->
-			
-			<div ng-repeat="content in contentDetailCtrl.accesArticles.data track by $index">
-				
-				<p><a ng-href="{{content.url}}">{{ content.text[0] }}</a></p>
-				<p class="red-sub" ng-repeat="taxo in content['taxonomy.5a114f1b396588d22856706f'] track by $index">{{contentDetailCtrl.accesArticles.facetsLabels[taxo]}}</p>
-			</div> 
-			
-        </div>
-
+<div class="row">  
+	<div class="col-sm-8 col-sm-push-2">
+		<h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;text-align:center;">Sommaire</h3>
+		<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Plan-->
+		<div class="sommaire">	
+			<div ng-repeat="content in contentDetailCtrl.infoArticles.data track by $index">
+				<p class="red-sub" ng-show="displayTaxo[$index]" class="categorie">{{contentDetailCtrl.infoArticles.facetsLabels[content['taxonomy.5a114f1b396588d22856706f'][0]]}}</p>
+				<p  class="article"><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>
+				<div ng-show="!displayTaxo[$index] && displayTaxo[$index+1]"><br/><br/></div>
+			</div>
+		</div>	
 	</div>
-
-
-    <div class="col-sm-3 col-sm-pull-9"> 
-        <img class="img-responsive  padding-top padding-right" ng-if="foiContents.data[0].fields.image"
-				 ng-src="{{rubedo.imageUrl.getUrlByMediaId(foiContents.data[0].fields.image,{width:'300px',mode:'boxed'}) }}"
-				 alt=""/>	
-    </div>
-	
 </div>
  
 
