--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -37,11 +37,12 @@
 					 ng-if="content['taxonomy.5a114f1b396588d22856706f'][0] === '5a114f62396588a52956706b' "
 					 ng-show="displayTaxo[$index]"
 					 alt=""/>
+					<!--afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{width:'768px',mode:'boxed'})}} 768w,{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{width:'1200px',mode:'boxed'})}} 1200w"-->
 					<img class="img-responsive  padding-top padding-right"
-					 ng-src="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image_oecumenisme'],{height:'100px',mode:'boxed'}) }}"
+					 ng-src="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image_oecumenisme'],{height:'100px',mode:'boxed'}) }} 768w"
 					 ng-if="content['taxonomy.5a114f1b396588d22856706f'][0] === '5a114f90396588c52956706b' "
 					 ng-show="displayTaxo[$index]"
-					 alt=""/>
+					 alt=""/> 
 					<img class="img-responsive  padding-top padding-right"
 					 ng-src="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image_formation_chretienne'],{height:'100px',mode:'boxed'}) }}"
 					 ng-if="content['taxonomy.5a114f1b396588d22856706f'][0] === '5a114fa4396588b02956706c' "
