--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -38,8 +38,8 @@
 					 ng-show="displayTaxo[$index]"
 					 alt=""/>
 					
-					<header class="content"
-					 afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image_oecumenisme'] ,{height:'150px',mode:'boxed'})}} 768w,{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image_oecumenisme'] ,{width:'1200px',mode:'boxed'})}} 1200w"
+					<header class="content" style="overflow-x:hidden"
+					 afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image_oecumenisme'] ,{width:'480px',mode:'boxed'})}} 480w"
 					 ng-if="content['taxonomy.5a114f1b396588d22856706f'][0] === '5a114f90396588c52956706b' "
 					 ng-show="displayTaxo[$index]">
 					</header>
