--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
@@ -1,26 +1,24 @@
 <a ng-if="block.code" ng-attr-name=" {{block.code | split:'/':1}}" ></a>
 
 
-
+        <p>{{block.code | split:'/':0}}</p>
+        <p>{{block.code | split:'/':1}}</p>
+        
         <!-- Ajout d'un menu secondaire en haute de page -->
-        <div ng-if=" {{block.code | split:'/':0}} === '1' " >
+<!--        <div ng-if=" {{block.code | split:'/':0}} === '1' " >
             <nav  role="navigation">
                 <ul>
                     <li ng-repeat="page in contentDetailCtrl.pagesBlocks" ng-class="{active:contentDetailCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
-                            <!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
                         <a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title |uppercase}}</a>
-        
-                    <!--<a href="/fr/accueil/festival" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown">Festival</a>-->
                         <a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}}</a>
                         <ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
                             <li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
-                        <!--<a ng-if="menuCtrl.currentRouteleine.indexOf(page.url) > -1" ng-href="{{page.url}}#{{bloc.title | split:'/':0}}">{{bloc.title | split:'/':1}}</a>-->
                                 <a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
-            </nav>
+            </nav>-->
 
 
 
