--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
@@ -5,7 +5,7 @@
         <p>{{block.code | split:'/':1}}</p>
         
         <!-- Ajout d'un menu secondaire en haute de page -->
-<!--        <div ng-if=" {{block.code | split:'/':0}} === '1' " >
+        <div ng-if=" {{block.code | split:'/':0}} == '1' " >
             <nav  role="navigation">
                 <ul>
                     <li ng-repeat="page in contentDetailCtrl.pagesBlocks" ng-class="{active:contentDetailCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
@@ -18,7 +18,8 @@
                         </ul>
                     </li>
                 </ul>
-            </nav>-->
+            </nav>
+        </div>
 
 
 
