--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
@@ -7,15 +7,9 @@
         <!-- Ajout d'un menu secondaire en haute de page -->
 <!--        <div ng-if="contentDetailCtrl.pagesBlocks[0]" >-->
             <nav  role="navigation">
-                <ul>
-                    <li ng-repeat="page in contentDetailCtrl.pagesBlocks" ng-class="{active:contentDetailCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
-                        <a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title |uppercase}}</a>
-                        <a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}}</a>
-                        <ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
-                            <li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
-                                <a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
-                            </li>
-                        </ul>
+                <ul role="menu">
+                    <li ng-repeat="bloc in contentDetailCtrl.pageBlock.blocks | orderBy :'order' track by $index" class="" >
+                        <a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
                     </li>
                 </ul>
             </nav>
