--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -347,7 +347,7 @@ input, textarea {
 		width: 29%;
 		border: 2px solid #fff;
 }
-.button:hover{background: white; color:@bg}
+//.button:hover{background: white; color:@bg}
 button{border: 2px solid white; &:hover{background: white; color:@bg}}
 //menu
 .navbar.navbar-default{
@@ -551,8 +551,8 @@ ng-form[name=inscription_form] label.sexe_label {
     cursor: pointer;
     margin-right: 25px;
 }
-ng-form .row{margin: 0 15px;margin-bottom:12px; }
-ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
+//ng-form .row{margin: 0 15px;margin-bottom:12px; }
+//ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
 
 
 
