--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -19,6 +19,20 @@
                                     </div>
                             </ng-form>
                         </div>
+                        
+                        <h2 class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==2}" ng-click="formCtrl.setCurrentStage(2,infos_personnelles.$valid)">{{rubedo.translate("Block.Inscription.InfosFamiliales", "Informations familiales")}}
+                                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>2"></span>
+                        </h2>
+                        <div id="inscriptionStage2" class="collapse in">
+                            <ng-form name="infos_familiales">
+                                    <div  class="row" ng-include="formCtrl.family_infos"></div>
+                                   <!-- <div  class="row" ng-include="formCtrl.freres_soeurs_infos"></div>-->
+                                    <div class="row text-center">
+                                        <div class="button" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
+                                    </div>
+                            </ng-form>
+                        </div>
                 </ng-form>
         </div> 
 
