--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -539,7 +539,7 @@ ng-form[name=inscription_form] input[type=radio]:checked+label.sexe_label, ng-fo
     line-height: 36px;
 }
 ng-form[name=inscription_form] h2 {
-				color:@bg !important;
+				color:white !important;
 }
 ng-form[name=inscription_form] label.sexe_label {
     background-color: transparent;
@@ -583,7 +583,7 @@ ng-form[name=inscription_form] label.sexe_label {
   .button.submit.disabled{color:@marron; border: 2px solid @marron; cursor: default}
 /*Titre section*/
 h2.capital{text-align: center; padding:12px 0; border-bottom: 2px solid; margin-top:12px; margin-bottom:24px}
-h2.displayed{background-color: white}
+h2.displayed{color:@bg;background-color: white}
 h2.displayed + ng-form .row{max-height:300px; transition: max-height 0.8s ease-out; margin-bottom:12px; overflow: visible;}
 ng-form .row{margin: 0 15px;margin-bottom:12px; }
 //////////////COLLAPSE////////////////////////
