--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Situation.Familiale")}}*</label></div>
             <div class="col-sm-8">
-                <input type="radio"  name="situationFamiliale" id="ensemble" value="ensemble" ng-model="inscription.situationFamiliale" ng-click="inscription.situationFamiliale = ensemble" required>
+                <input type="radio"  name="situationFamiliale" id="ensemble" value="ensemble" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = true; formCtrl.parentsSepares = false;" required>
                             <label for="ensemble" class="sexe_label">{{rubedo.translate("Block.InscriptionSituation.Familiale.Ensemble")}}</label>	
-                <input type="radio"  name="situationFamiliale" id="separes" value="separes" ng-model="inscription.situationFamiliale" ng-click="inscription.situationFamiliale = separes">
+                <input type="radio"  name="situationFamiliale" id="separes" value="separes" ng-model="inscription.situationFamiliale" ng-click="parentsEnsemble = false; parentsSepares = true;">
                             <label for="separes" class="sexe_label">{{rubedo.translate("Block.Inscription.Situation.Familiale.Separes")}}</label>
             </div>
         </div>
     </div>
     
-    <div class="container" ng-if="inscription.situationFamiliale=='ensemble' || inscription.situationFamiliale=='separes' ">
+    <div class="container" ng-if="formCtrl.parentsEnsemble || formCtrl.parentsSepares ">
         <!--PERE-->
         <div class="col-md-6 col-sm-12">
             <h3 class="row">{{rubedo.translate("Block.Inscription.Lui")}}</h3>
@@ -46,7 +46,7 @@
             </div>
             
             
-            <div ng-if="parentsSepares">
+            <div ng-if="formCtrl.parentsSepares">
                 <div class="row">
                     <div class="col-sm-4"><label for="adressePere" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
                     <div class="col-sm-8"><textarea class="form-control" rows="3" id="adressePere" ng-model="inscription.addressPere" name="addressPere" placeholder="" required></textarea></div>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             
-                <div ng-if="parentsSepares">
+                <div ng-if="formCtrl.parentsSepares">
                     <div class="row">
                         <div class="col-sm-4"><label for="adresseMere" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
                         <div class="col-sm-8"><textarea class="form-control" rows="3" id="adresseMere" ng-model="inscription.addressMere" name="addressMere" placeholder="" required></textarea></div>
@@ -136,7 +136,7 @@
         
         
         
-        <div class="col-xs-12" ng-if="!personneConnue && parentsEnsemble">
+        <div class="col-xs-12" ng-if="!personneConnue && formCtrl.parentsEnsemble">
             <h3 class="row">{{rubedo.translate("Block.Inscription.Couple", "Couple")}}</h3>
         
             <div class="row">
