--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -532,6 +532,7 @@ label.label_style, .label_style label:not(.radio-inline) {
     position: relative;
     top: .7em;
 }
+
 ng-form[name=inscription_form] input[type=radio]:checked+label.sexe_label, ng-form[name=inscription_form] input[type=radio]+label.sexe_label:hover {
     color: @bg;
     background-color: white;
@@ -565,6 +566,10 @@ ng-form[name=inscription_form] label.sexe_label {
 	vertical-align: middle;
 	background-color: white;
 	border: 1px solid #fff;
+  }
+		label.sexe_label.boite{
+    width: auto;
+    min-width: 75px; 
   }
 
   input[type=radio] +label:not(.sexe_label):before {
