--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -5,9 +5,9 @@
             <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Situation.Familiale")}}*</label></div>
             <div class="col-sm-8">
                 <input type="radio"  name="situationFamiliale" id="ensemble" value="ensemble" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = true; formCtrl.parentsSepares = false;" required>
-                            <label for="ensemble" class="sexe_label">{{rubedo.translate("Block.InscriptionSituation.Familiale.Ensemble")}}</label>	
+                            <label for="ensemble" class="sexe_label boite">{{rubedo.translate("Block.InscriptionSituation.Familiale.Ensemble")}}</label>	
                 <input type="radio"  name="situationFamiliale" id="separes" value="separes" ng-model="inscription.situationFamiliale" ng-click="formCtrl.parentsEnsemble = false; formCtrl.parentsSepares = true;">
-                            <label for="separes" class="sexe_label">{{rubedo.translate("Block.Inscription.Situation.Familiale.Separes")}}</label>
+                            <label for="separes" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Situation.Familiale.Separes")}}</label>
             </div>
         </div>
     </div>
