--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.email_verif" ng-required="inscription.emailPere">
+                    <input type="email" class="form-control" id="emailPere_verif" name="emailPere_verif" placeholder="user@mydomain.com" ng-model="inscription.emailPere_verif" ng-required="inscription.emailPere">
                     <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <div class="row">
                     <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
                     <div class="col-sm-8">
-                        <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.email_verif" ng-required="inscription.emailMere">
+                        <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.emailMere_verif" ng-required="inscription.emailMere">
                         <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
                     </div>
                 </div>
