--- a/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
+++ b/theme/foyers/templates/blocks/contentDetail/propositionFoyer.html
@@ -30,7 +30,7 @@
 							        <!--Type de public -->
 								<div ng-repeat="public in contentDetailCtrl.content.fields.publics track by $index" >
 	
-									<p><a ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
+									<p><a class="cursor-as-pointer" ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
 								</div>
 						</div>
     </div>
