--- a/theme/foyers/templates/blocks/formulaire/etudes_travail.html
+++ b/theme/foyers/templates/blocks/formulaire/etudes_travail.html
@@ -1,29 +1,20 @@
-<!--Si ados, demander classe-->
-    <div class="row" ng-if="inscription.public_type == 'adolescent' && !personneConnue">
-        <div class="col-sm-4"><label for="classeEtudes" class="label_style">{{rubedo.translate("Block.Inscription.Classe")}} *</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="classeEtudes" ng-model="inscription.classeEtudes" name="classeEtudes" required></div>
+    <div class="row" ng-if="inscription.public_type == 'etudiant' && !personneConnue">
+        <div class="col-sm-4"><label for="etudes" class="label_style">{{rubedo.translate("Block.Inscription.Etudes")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="etudes" ng-model="inscription.etudes" name="etudes" required></div>
     </div>
-    <!--Si jeunes, deemander situation-->
-   <div class="row" ng-if="inscription.public_type == 'jeune-adulte' && !personneConnue">
-        <div class="col-sm-4"><label for="classe" class="label_style">{{rubedo.translate("Block.Inscription.Situation")}}</label></div>
-        <div class="col-sm-8">
-            <div class="col-xs-12">
-                <input type="radio"  name="situation" id="etudiant" value="{{rubedo.translate('Block.Inscription.Situation.Etudiant')}}" ng-model="inscription.situation">
-                        <label for="etudiant">{{rubedo.translate('Block.Inscription.Situation.Etudiant')}}</label>
-            </div>
-            <div class="col-xs-12">
-                <input type="radio"  name="situation" id="jeunePro" value="{{rubedo.translate('Block.Inscription.Situation.JPro')}}" ng-model="inscription.situation">
-                        <label for="jeunePro">{{rubedo.translate('Block.Inscription.Situation.JPro')}}</label>
-            </div>
-            <div class="col-xs-12">
-                <input type="radio"  name="situation" id="situationAutre" value="{{rubedo.translate('Block.Inscription.Situation.Autre')}}" ng-model="inscription.situation">
-                        <label for="situationAutre">{{rubedo.translate("Block.Inscription.Situation.Autre")}}</label>
-                        <input type="text" name="autreSituation" id="autreSituation" ng-model="inscription.autreSituation" class="complement_text" />
-            </div>
-        </div>
+    <div class="row" ng-if="inscription.public_type == 'etudiant' && !personneConnue">
+        <div class="col-sm-4"><label for="etablissementActuel" class="label_style">{{rubedo.translate("Block.Inscription.Etudes.Etablissement.Actuel")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="etablissementActuel" ng-model="inscription.etablissementActuel" name="etablissementActuel" required></div>
     </div>
-    <!--Si adulte, demander profession-->
-    <div class="row" ng-if="inscription.public_type == 'adulte' && !personneConnue">
+    <div class="row" ng-if="inscription.public_type == 'etudiant' && !personneConnue">
+        <div class="col-sm-4"><label for="etablissementSuivant" class="label_style">{{rubedo.translate("Block.Inscription.Etudes.Etablissement.Prochain")}} *</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="etablissementSuivant" ng-model="inscription.etablissementSuivant" name="etablissementSuivant" required></div>
+    </div>
+   <div class="row" ng-if="!personneConnue">
+        <div class="col-sm-4"><label for="diplomes" class="label_style">{{rubedo.translate("Block.Inscription.Etudes.Diplomes")}}</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="diplomes" ng-model="inscription.diplomes" name="diplomes" required></div>
+    </div>
+     <div class="row" ng-if="inscription.public_type == 'adulte' && !personneConnue">
         <div class="col-sm-4"><label for="profession" class="label_style">{{rubedo.translate("Block.Inscription.Profession")}}*</label></div>
         <div class="col-sm-8"><input class="form-control" type="text" id="profession" ng-model="inscription.profession" name="profession" required></div>
     </div>
