--- a/theme/foyers/templates/blocks/formulaire/freres_soeurs.html
+++ b/theme/foyers/templates/blocks/formulaire/freres_soeurs.html
@@ -1,20 +1,20 @@
 <h3 class="row">{{rubedo.translate("Block.Inscription.FreresEtSoeurs")}}</h3>
     
-<div class="row" ng-repeat="frere in inscription.freres track by $index" class="enfant">
+<div class="row" ng-repeat="frere in inscription.freres_soeurs track by $index" class="enfant">
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Nom.Different")}}</label>
-        <input type="text" ng-model="inscription.freres[$index].nom" placeholder='{{rubedo.translate("Block.Inscription.Nom")}}' readonly>
+        <input type="text" ng-model="inscription.freres_soeurs[$index].nom" placeholder='{{rubedo.translate("Block.Inscription.Nom")}}' readonly>
     </div>
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Prenom")}}</label>
-        <input type="text" ng-model="inscription.freres[$index].prenom" placeholder='{{rubedo.translate("Block.Inscription.Prenom")}}' readonly>
+        <input type="text" ng-model="inscription.freres_soeurs[$index].prenom" placeholder='{{rubedo.translate("Block.Inscription.Prenom")}}' readonly>
     </div>
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Age")}}</label>
-        <input type="text" ng-model="inscription.freres[$index].age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}' readonly>
+        <input type="text" ng-model="inscription.freres_soeurs[$index].age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}' readonly>
     </div>
-    <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.removeFrere($index)">
-        <span class="glyphicon glyphicon-minus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.Enfant.Supprimer")}}
+    <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.removeFrereSoeur($index)">
+        <span class="glyphicon glyphicon-minus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.FrereSoeur.Supprimer")}}
     </p>
     
     
@@ -23,14 +23,14 @@
 <div class="row">
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Nom.Different")}}</label>
-        <input type="text" ng-model="inscription.frere.nom" placeholder='{{rubedo.translate("Block.Inscription.Nom")}}' >
+        <input type="text" ng-model="inscription.freres_soeurs.nom" placeholder='{{rubedo.translate("Block.Inscription.Nom")}}' >
     </div>
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Prenom")}}</label>
-        <input type="text" ng-model="inscription.frere.prenom" placeholder='{{rubedo.translate("Block.Inscription.Prenom")}}'>
+        <input type="text" ng-model="inscription.freres_soeurs.prenom" placeholder='{{rubedo.translate("Block.Inscription.Prenom")}}'>
     </div>
-    <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.addFrere(inscription.frere);inscription.frere={}">
-        <span class="glyphicon glyphicon-plus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.Frere.Ajouter","Ajouter")}}
+    <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.addFrereSoeur(inscription.freres_soeurs);inscription.freres_soeurs={}">
+        <span class="glyphicon glyphicon-plus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.FrereSoeur.Ajouter","Ajouter")}}
     </p>
 </div>
 
