--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -14,7 +14,7 @@
                             <ng-form name="infos_personnelles">
                                     <div  class="row" ng-include="formCtrl.general_infos"></div>
                                     <div class="row text-center">
-                                        <div class="button submit" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                     </div>
                             </ng-form>
@@ -26,10 +26,27 @@
                         <div id="inscriptionStage2" class="collapse">
                             <ng-form name="infos_familiales">
                                     <div  class="row" ng-include="formCtrl.family_infos"></div>
-                                   <!-- <div  class="row" ng-include="formCtrl.freres_soeurs_infos"></div>-->
+                                    <div  class="row" ng-include="formCtrl.freres_soeurs_infos"></div>
                                     <div class="row text-center">
-                                        <div class="button submit" ng-class="{'disabled' : infos_familiales.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_familiales.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_familiales.$invalid}" ng-click="formCtrl.setCurrentStage(2,infos_familiales.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_familiales.$invalid && infos_familiales.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
+                                    </div>
+                            </ng-form>
+                        </div>
+                        
+                        <h2 ng-if="contentDetailCtrl.content.public=etudiant" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(2,infos_etudes.$valid)">{{rubedo.translate("Block.Inscription.Infos.Etudes", "Études")}}
+                                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>2"></span>
+                        </h2>
+                        <h2 ng-if="contentDetailCtrl.content.public=jeunePro" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(2,infos_etudes.$valid)">{{rubedo.translate("Block.Inscription.Infos.Travail","Situation professionnelle")}}
+                                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>2"></span>
+                        </h2>
+                        
+                        <div id="inscriptionStage3" class="collapse">
+                            <ng-form name="infos_travail">
+                                    <div  class="row" ng-include="formCtrl.travail_infos"></div>
+                                    <div class="row text-center">
+                                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_familiales.$invalid}" ng-click="formCtrl.setCurrentStage(3,infos_travail.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <p ng-if="infos_travail.$invalid && infos_travail.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
                                     </div>
                             </ng-form>
                         </div>
